--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Taniti-Tourism-Prototype</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
-    <app-root></app-root>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <title>Taniti-Tourism-Prototype</title>
+        <base href="/" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1"
+        />
+        <style>
+            @import url("https://fonts.googleapis.com/css2?family=Bad+Script&display=swap");
+            @import url("https://fonts.googleapis.com/css2?family=Bad+Script&family=Poiret+One&display=swap");
+        </style>
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="favicon.ico"
+        />
+    </head>
+    <body>
+        <app-root></app-root>
+    </body>
 </html>
