--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <link
             rel="icon"
             type="image/x-icon"
-            href="favicon.ico"
+            href="assets/images/logo.png"
         />
     </head>
     <body>
