Fix favicon bug.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Taniti-Tourism-Prototype</title>
+        <title>Taniti Tourism</title>
         <base href="/" />
         <meta
             name="viewport"
@@ -13,7 +13,7 @@
         </style>
         <link
             rel="icon"
-            type="image/x-icon"
+            type="image/png"
             href="assets/gallery/logo.png"
         />
     </head>
